--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Firebase
-.firebase
-*.firebase
-*.firebaserc
-
 # dependencies
-node_modules
 /node_modules
 /.pnp
 .pnp.js
-.pnp.cjs
 
 # testing
 /coverage
@@ -30,11 +23,9 @@ node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.npm
 
 # local env files
 .env*.local
-.env
 
 # vercel
 .vercel
@@ -43,6 +34,10 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-# Archives
-replica.tar.gz
+# firebase
+/.firebase
+firebase-debug.log*
+
+# archives
 *.tar.gz
+replica.tar.gz
